force-app/main/default/objects/Complaint_Status_Mapping__mdt/Complaint_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Complaint Status Mapping</label>
    <pluralLabel>Complaints Status Mapping</pluralLabel>
</CustomObject>