force-app/main/default/objects/Complaint_Status_Mapping__mdt/fields/Frigo__c.field-meta.xml
<CustomField>
    <fullName>Frigo__c</fullName>
    <label>Frigo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>