force-app/main/default/objects/Complaint_Status_Mapping__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>