force-app/main/default/objects/Complaint_Status_Mapping__mdt/fields/Target_Text__c.field-meta.xml
<CustomField>
    <fullName>Target_Text__c</fullName>
    <label>Target Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>